Java port: Native random number generator support